syntax = "proto3";

package user;

service UserService {
  rpc helloUser(HelloUserReq) returns (HelloUserRes) {}
}

message HelloUserReq {
  string name = 1;
}

message HelloUserRes {
  string message = 1;
}
